test/errors/scope-resolution/useImportNotModule.compopts
--detailed-errors # useImportNotModule-detailed.good
--no-detailed-errors # useImportNotModule-brief.good
